--- a/config_bf_ppl.ini
+++ b/config_bf_ppl.ini
@@ -24,9 +24,9 @@ CentroidThreshold: 0.1
 CentroidType: center 
 RegionCorner: 0
 SextractorPath: /usr/local/optical/sextractor/bin/sex
-ListDarksPPL: /projector/aplazas/data/WFIRST/2017-03-02/raw/andres-000[0-9]*.fits
-ListSpotsPPL: /projector/aplazas/data/WFIRST/2017-03-02/raw/andres-02[3-9][0-9]*.fits 
-ListFlatsPPL: /projector/aplazas/data/WFIRST/2017-03-02/raw/andres-00[3-9][0-9]*.fits 
+ListDarksPPL: /projector/aplazas/data/WFIRST/2017-03-02/raw/andres-0009_*.fits
+ListSpotsPPL: /projector/aplazas/data/WFIRST/2017-03-02/raw/andres-0209_*.fits 
+ListFlatsPPL: /projector/aplazas/data/WFIRST/2017-03-02/raw/andres-00[3][9]_*.fits 
 ListDarksSimulation: /projector/aplazas/TESTJULY21_90_V9_OFFSET00_LOW_NOISE_NO_NL/*BACKGROUND*_00[1-2]*.fits
 ListSpotsSimulation: /projector/aplazas/TESTJULY21_90_V9_OFFSET00_LOW_NOISE_NO_NL/*OBJECT*.fits
 ListFlatsSimulation: /projector/aplazas/TESTJULY21_90_V9_OFFSET00_LOW_NOISE_NO_NL/*FLAT*.fits
