--- a/config_bf_ppl.ini
+++ b/config_bf_ppl.ini
@@ -7,18 +7,20 @@ Gain: 2.7
 YSize: 2048
 NChan: 32
 NRef: 3
-StampString: three
 CorrectNL: True
 PolyOrder: 3
 CorrectIPC: True
 SubtractDark: True
 Simulation: False
 ExamineRamps: True
-DiscardSpots: 4 20 22
-DiscardDarks: 5 6
-DiscardFlats: -1 
-StartSampleFlats: 1
-StartSampleSpots: 1
+DiscardRampsSpots: 4 20 22
+DiscardRampsDarks: 5 6
+DiscardRampsFlats: -1 
+StartFrameFlats: 1
+StartFrameSpots: 1
+XBorderCut: 50
+YBorderCut: 50
+EndSpotVector: -1
 BadPixelMask: /projector/aplazas/master-euclid-mask.fits 
 CentroidThreshold: 0.1
 CentroidType: center 
