Fix typos and change config options

--- a/config_bf_ppl.ini
+++ b/config_bf_ppl.ini
@@ -1,20 +1,20 @@
 [params]
-OutDirRoot: /projector/aplazas/
-OutDirName: MAR14_Y_BAND_CUBIC
-OutPDFName: bf_ppl_out.pdf
+OutDirRoot: /projector/aplazas/TEST-2021
+OutDirName: TEST_NEW_DATA
+OutPDFName: bf_ppl_out_test.pdf
 SigmaCut: 3
 Gain: 2.7
-YSize: 2048
+YSize: 4096
 NChan: 32
 NRef: 3
 CorrectNL: True
 PolyOrder: 3
 CorrectIPC: True
 SubtractDark: True
-Simulation: False
+Simulation: True
 ExamineRamps: True
-DiscardRampsSpots: 4 20 22
-DiscardRampsDarks: 5 6
+DiscardRampsSpots: -1
+DiscardRampsDarks: -1
 DiscardRampsFlats: -1 
 StartFrameFlats: 1
 StartFrameSpots: 1
