--- a/config_bf_ppl.ini
+++ b/config_bf_ppl.ini
@@ -4,14 +4,14 @@ OutDirName: TEST_NEW_DATA
 OutPDFName: bf_ppl_out_test.pdf
 SigmaCut: 3
 Gain: 2.7
-YSize: 4096
+YSize: 2048
 NChan: 32
 NRef: 3
 CorrectNL: True
 PolyOrder: 3
 CorrectIPC: True
 SubtractDark: True
-Simulation: True
+Simulation: False
 ExamineRamps: True
 DiscardRampsSpots: -1
 DiscardRampsDarks: -1
