Add conditional for mask

--- a/config_bf_ppl.ini
+++ b/config_bf_ppl.ini
@@ -21,6 +21,7 @@ StartFrameSpots: 1
 XBorderCut: 50
 YBorderCut: 50
 EndSpotVector: -1
+UseMask: False
 BadPixelMask: /projector/aplazas/master-euclid-mask.fits 
 CentroidThreshold: 0.1
 CentroidType: center 
