--- a/config_bf_ppl_NEW_DATA_2021-02-18.ini
+++ b/config_bf_ppl_NEW_DATA_2021-02-18.ini
@@ -1,20 +1,20 @@
 [params]
 OutDirRoot: /projector/aplazas/2021MAR30/
-OutDirName: PRUEBA-NLCORR-METHOD2-STACKED-USE-FLATS-data-2021-02-18
+OutDirName: 2021APR04-TRES-data-2021-02-18
 OutPDFName: bf_ppl_out.pdf
-SigmaCut: 3
+SigmaCut: 2
 Gain: 2.2
 YSize: 4096
 NChan: 32
 DoReferencePixels: False
 NRef: 3
 UseMedianFiles: True
-MedianFlatsFile : /projector/aplazas/stacked/2021MAR29/flats_median_stacked_NL_corrected.fits
-MedianSpotsFile: /projector/aplazas/stacked/2021MAR29/flats_median_stacked_NL_corrected.fits
-MedianDarksFile: /projector/aplazas/stacked/2021MAR29/darks_median_stacked_NL_corrected.fits
-RunSourceExtractor: False
+MedianFlatsFile : /projector/aplazas/stacked/2021MAR29/flats_median_stacked.fits
+MedianSpotsFile: /projector/aplazas/stacked/2021MAR29/spots_median_stacked.fits
+MedianDarksFile: /projector/aplazas/stacked/2021MAR29/darks_median_stacked.fits
+RunSourceExtractor: True
 SourceExtractorCatalog : /projector/aplazas/2021MAR30/PRUEBA-data-2021-02-18/hola_sextractor_out_last_sample_ramp_100.param 
-CorrectNL: False
+CorrectNL: True
 PolyOrder: 3
 CorrectIPC: True
 SubtractDark: True
