--- a/daofind_sex_detection.config
+++ b/daofind_sex_detection.config
@@ -15,12 +15,12 @@ PARAMETERS_NAME         sex_out_parameters1_detection.param
 
 DETECT_TYPE	CCD		# "CCD" or "PHOTO" (*)
 #DETECT_IMAGE	SAME		# "SAME" or <image filename>
-DETECT_MINAREA	2.9		# minimum number of pixels above threshold
+DETECT_MINAREA	2.0		# minimum number of pixels above threshold
 DETECT_MAXAREA  20
-DETECT_THRESH	3.0		# <sigmas> or <threshold>,<ZP> in mag.arcsec-2
+DETECT_THRESH	2.0		# <sigmas> or <threshold>,<ZP> in mag.arcsec-2
 ANALYSIS_THRESH	1.0		# <sigmas> or <threshold>,<ZP> in mag.arcsec-2
 
-FILTER		N		# apply filter for detection ("Y" or "N")?
+FILTER		Y		# apply filter for detection ("Y" or "N")?
 FILTER_NAME	default.conv	# name of the file containing the filter
 
 DEBLEND_NTHRESH	8		# Number of deblending sub-thresholds
@@ -49,14 +49,14 @@ WEIGHT_TYPE      NONE     # type of WEIGHTing: NONE, BACKGROUND,
 
 #------------------------------ Photometry -----------------------------------
 
-PHOT_APERTURES	2.5		# MAG_APER aperture diameter(s) in pixels
+PHOT_APERTURES	4.0		# MAG_APER aperture diameter(s) in pixels
 PHOT_AUTOPARAMS	2.5, 3.5	# MAG_AUTO parameters: <Kron_fact>,<min_radius>
 
 #SATUR_LEVEL	1000.0		# level (in ADUs) at which arises saturation
 
 #MAG_ZEROPOINT	0.0		# magnitude zero-point
 #MAG_GAMMA	4.0		# gamma of emulsion (for photographic scans)
-GAIN		2.7		# detector gain in e-/ADU.
+GAIN		2.2		# detector gain in e-/ADU.
 PIXEL_SCALE	1.0		# size of pixel in arcsec (0=use FITS WCS info).
 
 #------------------------- Star/Galaxy Separation ----------------------------
@@ -66,15 +66,15 @@ STARNNW_NAME	default.nnw	# Neural-Network_Weight table filename
 
 #------------------------------ Background -----------------------------------
 
-BACK_SIZE	64		# Background mesh: <size> or <width>,<height>
-BACK_FILTERSIZE	2.5		# Background filter: <size> or <width>,<height>
+BACK_SIZE	16		# Background mesh: <size> or <width>,<height>
+BACK_FILTERSIZE	3.5		# Background filter: <size> or <width>,<height>
 
 BACKPHOTO_TYPE	LOCAL		# can be "GLOBAL" or "LOCAL" (*)
 BACKPHOTO_THICK	24		# thickness of the background LOCAL annulus (*)
 
 #------------------------------ Check Image ----------------------------------
 
-CHECKIMAGE_TYPE	OBJECTS	        # can be one of "NONE", "BACKGROUND",
+CHECKIMAGE_TYPE	SEGMENTATION	        # can be one of "NONE", "BACKGROUND",
 				# "MINIBACKGROUND", "-BACKGROUND", "OBJECTS",
 				# "-OBJECTS", "SEGMENTATION", "APERTURES",
 				# or "FILTERED" (*)
